// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConfirmDialog > matches the en snapshot 1`] = `
<div
  aria-labelledby="base-ui-_r_e_"
  class="dt-dialog-popup dt-confirm-dialog"
  data-base-ui-focusable=""
  data-danger=""
  data-open=""
  id="_r_c_"
  role="alertdialog"
  style="--nested-dialogs: 0; --dt-dialog-width: 420px;"
  tabindex="-1"
>
  <div
    class="dt-dialog-body"
  >
    <h3
      class="dt-confirm-title"
      id="base-ui-_r_e_"
    >
      Delete this key?
    </h3>
    <div
      class="dt-confirm-target"
    >
      <span
        class="dt-confirm-target-name"
      >
        weather_getForecast
      </span>
      <span
        class="dt-confirm-impact"
      >
        Calls using this key stop working immediately.
      </span>
    </div>
  </div>
  <div
    class="dt-dialog-footer"
  >
    <button
      class="dt-button dt-button-md dt-button-outline"
      tabindex="0"
      type="button"
    >
      Cancel
    </button>
    <button
      class="dt-button dt-button-md dt-button-solid"
      data-tone="danger"
      tabindex="0"
      type="button"
    >
      Delete
    </button>
  </div>
</div>
`;

exports[`ConfirmDialog > matches the ko snapshot 1`] = `
<div
  aria-labelledby="base-ui-_r_b_"
  class="dt-dialog-popup dt-confirm-dialog"
  data-base-ui-focusable=""
  data-danger=""
  data-open=""
  id="_r_9_"
  role="alertdialog"
  style="--nested-dialogs: 0; --dt-dialog-width: 420px;"
  tabindex="-1"
>
  <div
    class="dt-dialog-body"
  >
    <h3
      class="dt-confirm-title"
      id="base-ui-_r_b_"
    >
      Delete this key?
    </h3>
    <div
      class="dt-confirm-target"
    >
      <span
        class="dt-confirm-target-name"
      >
        weather_getForecast
      </span>
      <span
        class="dt-confirm-impact"
      >
        Calls using this key stop working immediately.
      </span>
    </div>
  </div>
  <div
    class="dt-dialog-footer"
  >
    <button
      class="dt-button dt-button-md dt-button-outline"
      tabindex="0"
      type="button"
    >
      취소
    </button>
    <button
      class="dt-button dt-button-md dt-button-solid"
      data-tone="danger"
      tabindex="0"
      type="button"
    >
      삭제
    </button>
  </div>
</div>
`;
